# RRM

./: .gitignore
src/block1_Maszay/: CMakeLists.txt  package.xml
src/block1_Maszay/launch/: fk.launch.xml
src/block1_Maszay/src/: logger_node.cpp  teleop_node.cpp  trajectory_player_node.cpp
src/cv1/: CMakeLists.txt  package.xml
src/cv1/include/cv1/: robot.hpp
src/cv1/src/: cv1_node.cpp  robot.cpp
src/cvicenie_2/rrm_msgs/: CMakeLists.txt
src/cvicenie_2/rrm_sim/: CMakeLists.txt
src/cvicenie_2/rrm_sim/include/rrm_sim/: motion.h
src/cvicenie_2/rrm_sim/src/: motion.cpp  robot_sim_node.cpp
src/cvicenie_2/rrm_simple_robot_model/: CMakeLists.txt
src/cvicenie_2/rrm_simple_robot_model/urdf/: arm.urdf
src/maszay_interface/: CMakeLists.txt  package.xml
src/maszay_interface/srv/: PlayTrajectory.srv
